--- a/_sass/responsive.scss
+++ b/_sass/responsive.scss
@@ -1,6 +1,7 @@
 // Responsive Design - Mobile First Approach
 
 @use 'sass:color';
+@use 'variables' as *;
 
 // =======================
 // SITE HEADER & NAVIGATION
